--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,7 +14,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: burlywood;
+	background-color: pink;
 }
 
 main {
@@ -24,12 +24,14 @@ main {
 
 .enter-todos-container {
 	flex-basis: 25%;
-	background-color: rgb(0, 255, 170);
+	background-color: rgb(5, 107, 5);
 }
 
 .display-todos-container {
 	flex-basis: 75%;
 	background-color: rgb(191, 122, 255);
+	display: flex;
+	flex-direction: column;
 }
 
 .todo-form {
@@ -42,15 +44,77 @@ main {
 .todo-form input {
 	height: 2rem;
 	padding: 0 0.25rem;
+	border-radius: 0.25rem;
 }
 
 .task-description-input {
 	resize: none;
 	padding: 0.25rem;
+	border-radius: 0.25rem;
 }
 
 .submit-task-button {
 	height: 2rem;
 	cursor: pointer;
+	border-radius: 0.25rem;
 }
 
+.filter-container {
+	flex-basis: 10%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	padding: 0 4rem;
+	gap: 0.5rem;
+	/* border: 2px solid blue; */
+}
+
+.filter-element {
+	width: 10rem;
+	height: 2rem;
+	border-radius: 0.25rem;
+}
+
+.todo-items-container {
+	flex-basis: 90%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.display-todos-header {
+	width: 100%;
+	height: 3rem;
+	display: flex;
+	/* border: 2px solid azure; */
+}
+
+.display-todos-header span {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.task-number-header {
+	flex-basis: 5%;
+	/* background-color: pink; */
+}
+
+.task-title-header {
+	flex-basis: 20%;
+	/* background-color: green; */
+}
+
+.task-date-header {
+	flex-basis: 15%;
+	/* background-color: pink; */
+}
+.task-description-header {
+	flex-basis: 45%;
+	/* background-color: green; */
+}
+
+.task-delete-header {
+	flex-basis: 15%;
+	/* background-color: pink; */
+}
